# okotu-os

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  FEATURE_FLAGS.md  LICENSE.md  Makefile.toml  SECURITY.md  TODO.md  build.rs  init.bat  init.sh  linker.ld  readme.md
.cargo/: config.toml
docs/: FEATURE_FLAGS.md
local_macros/src/: lib.rs
raw_contents/: compress_ucode.bat
scripts/: WINDOWS_NOT_SUPPORTED  build_iso.sh  get_microcode.bat  get_microcode.sh  internal_compress_ucode.bat  internal_compress_ucode.sh  internal_init_script.sh  run.sh
src/: main.rs  send_and_get.rs  util_types.rs
src/acpi/: aml.rs  core.rs  handler.rs  mod.rs
src/apic_helper/: mod.rs
src/arch/x86_64/: trampoline.asm
src/asy_nc/: mod.rs
src/async/: mod.rs
src/cpu/: utils.rs
src/cpu/mitigation/ucode/: mod.rs  types.rs
src/cpu_flags/: mod.rs
src/drivers/disk/virt_io/: mod.rs
src/fonts/: mod.rs
src/fs/: mod.rs
src/interrupt/: api.rs  raw.rs
src/io/console/: gop.rs  mod.rs
src/logger/: core.rs  macros.rs  mod.rs  types.rs  utils.rs
src/manager/: display_manager.rs  memory_manager.rs
src/mem/: map.rs  mod.rs  smart_ptr.rs  thread_safe.rs  types.rs
src/mem/allocator/: frame_boundary_tag.rs  main.rs  mod.rs  uefi_allocator.rs
src/mem/paging/: types.rs
src/memory/: mod.rs  paging.rs  physical_allocator.rs
src/multi_core/init/: raw.rs
src/result/: mod.rs  types.rs
src/simd/: mod.rs
src/table/: configuration.rs  mod.rs
src/thread_local/: mod.rs
src/timer/: tsc.rs
src/uefi_helper/: boot.rs
src/util/: lapic.rs  logger.rs  mod.rs  proto.rs  result.rs  timer.rs  version.rs
src/util/helper/: interrupt.rs  mod.rs  shell.rs
src/util/mem/: thread_safe.rs  types.rs
src/util/mem/allocator/: frame_boundary_tag.rs  main.rs  slab.rs
src/version/: core.rs  io.rs  mod.rs  rhai.rs  seride.rs  types.rs
