[package]
name = "test_os_v2"
version = "0.1.0"
edition = "2024"

[features]
default = ["enable_uart_outputs", "enable_normal_safety_checks", "enable_syscall_arg_checks", "include_boot_option_to_memcheck", "enable_log", "enable_stack_checks"]

features_enable_debug_mode = ["enable_error_location_caller", "enable_debug_outputs", "enable_overprotective_safety_checks"]

enable_debug_outputs = ["enable_debug_level_outputs"]
enable_debug_level_outputs = ["enable_log"]

enable_log = []

enable_lldb_debug = []

enable_ligatures = ["rustybuzz"]

include_boot_option_to_memcheck = ["enable_boot_option"]

enable_boot_option = []


enable_uart_outputs = ["bincode", "uart_16550"]

enable_essential_safety_checks = []
enable_required_safety_checks = ["enable_essential_safety_checks"]
enable_normal_safety_checks = ["enable_required_safety_checks"]

enable_overprotective_safety_checks = ["enable_normal_safety_checks"]

enable_error_location_caller = []

enable_stack_checks = []
enable_syscall_arg_checks = []

disable_panic_restarts = []

[dependencies]
uefi = { version = "^0.36", features = ["alloc", "logger"], default-features = false }
uefi-raw = "^0.13"
bincode = { version = "^2.0", default-features = false, features = ["alloc", "serde"], optional = true }

rustybuzz = { version = "^0.14", default-features = false, features = ["libm"], optional = true }
spin = "^0.10"
bitflags = "^2.10"
proc-bitfield = { version = "^0.5", default-features = false, features = ["nightly", "gce"] }
num-traits = { version = "^0.2", default-features = false }
serde = { version = "^1.0", default-features = false, features = ["derive", "alloc"] }
x86_64 = { version = "^0.15", features = ["instructions", "nightly"] }
uart_16550 = { version = "^0.4", default-features = false, features = ["stable"], optional = true }
acpi = { version = "^6.1", default-features = false, features = ["alloc", "aml"] }
itertools = { version = "^0.14", default-features = false, features = ["use_alloc"] }
num-derive = "^0.4"
x86 = "^0.52"
const_format = { version = "^0.2", features = ["all"] }
bitfield = { version = "^0.19", default-features = false }
local_macros = { path = "local_macros" }
rhai = { version = "^1.24", default-features = false, features = ["no_std", "sync"] }
core-error = { version = "^0.0.0", default-features = false, features = ["alloc"] }
const-str = "^1.1"
base64 = { version = "^0.22", default-features = false, features = ["alloc"] }
yaml-peg = { version = "^1.0", default-features = false, features = ["serde"] }
paste = { version = "^1.0" }
talc = { version = "^5.0", default-features = false, features = ["counters"] }
lazy_static = { version = "^1.0", default-features = false, features = ["spin_no_std"] }
spinning_top = { version = "0.3.0", default-features = false }

[build-dependencies]
sha3 = "0.10"
walkdir = "^2.5"
hex = { version = "^0.4" }
nasm-rs = "^0.3"

[profile.dev]
opt-level = 1
overflow-checks = true
debug = 2
debug-assertions = true
lto = false
panic="abort"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = "symbols"
debug-assertions = false
debug = "line-tables-only"
overflow-checks = false
incremental = false
panic="abort"
